fix baby mooshrooms